  [Robin Gee]
  * Fixed bug in tusa_langer_2016.py related to coeffs affecting Repi models

  [Michele Simionato]
  * Added a check to forbid to set `ses_per_logic_tree_path = 0`
  * Added an API `/extract/event_info/eidx`
  * Splitting the sources in classical calculators and not in event based
  * Removed `max_site_model_distance`
  * Extended the logic used in event_based_risk - read the hazard sites
    from the site model, not from the exposure - to all calculators
  * In classical_bcr calculations with a CSV exposure the retrofitted field
    was not read. Now a missing retrofitted value is an error

python3-oq-engine (3.3.0-1~xenial01) xenial; urgency=low

  [Graeme Weatherill]
  * Adds GMPE suite for national PSHA for Germany

  [Daniele Viganò]
  * Added a warning box when an unsupported browser is used to view the WebUI
  * Updated Docker containers to support a multi-node deployment
    with a shared directory
  * Moved the Docker containers source code from oq-builders
  * Updated the documentation related to the shared directory
    which is now mandatory for multi-node deployments

  [Matteo Nastasi]
  * Removed tests folders

  [Stéphane Drouet]
  * Added Drouet & Cotton (2015) GMPE including 2017 erratum

  [Michele Simionato]
  * Optimized the memory occupation in classical calculations (Context.poe_map)
  * Fixed a wrong counting of the ruptures in split fault sources with
    an hypo_list/slip_list causing the calculation to fail
  * Made the export of uniform hazard spectra fast
  * Made the `std` hazard output properly exportable
  * Replaced the `~` in the header of the UHS csv files with a `-`
  * Restored the `individual_curves` flag even for the hazard curves
  * Implemented dGMPE weights per intensity measure type
  * Extended `--reuse-hazard` to all calculators
  * Fixed a bug in event_based_risk from GMFs with coefficients of variations

  [Graeme Weatherill]
  * Adds magnitude scaling relation for Germany

  [Michele Simionato]